pscpre1/dev/qna-api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: qna-api
    env: dev
    maestro: "true"
    maestroversion: v2
    team: content
  name: qna-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qna-api
      env: dev
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        creationTimestamp: "1579794799995"
        iam.amazonaws.com/role: app-dev-qna-api
        prometheus.io/path: /metrics
        prometheus.io/port: "3000"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: qna-api
        env: dev
        maestro: "true"
        maestroversion: v2
        team: content
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: qna-api
                  env: dev
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: qna-api
                  env: dev
              topologyKey: kubernetes.io/hostname
            weight: 10
      containers:
      - env:
        - name: AWS_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              key: AWS_ACCESS_KEY
              name: qna-api
        - name: AWS_SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: AWS_SECRET_KEY
              name: qna-api
        - name: MAESTRO_MONGO_QNAAPI_USERNAME
          valueFrom:
            secretKeyRef:
              key: MAESTRO_MONGO_QNAAPI_USERNAME
              name: qna-api
        - name: MAESTRO_MONGO_QNAAPI_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MAESTRO_MONGO_QNAAPI_PASSWORD
              name: qna-api
        - name: MAESTRO_MONGO_QNAAPI_HOSTS
          value: dev-pscpre1-imported-shard-00-00-bw1uh.mongodb.net:27017,dev-pscpre1-imported-shard-00-01-bw1uh.mongodb.net:27017,dev-pscpre1-imported-shard-00-02-bw1uh.mongodb.net:27017
        - name: MAESTRO_MONGO_QNAAPI_OPTIONS
          value: '{"ssl":"true","authSource":"admin","replicaSet":"dev-pscpre1-imported-shard-0"}'
        - name: MAESTRO_MONGO_QNAAPI_CONNSTR
          value: mongodb://$(MAESTRO_MONGO_QNAAPI_USERNAME):$(MAESTRO_MONGO_QNAAPI_PASSWORD)@dev-pscpre1-imported-shard-00-00-bw1uh.mongodb.net:27017,dev-pscpre1-imported-shard-00-01-bw1uh.mongodb.net:27017,dev-pscpre1-imported-shard-00-02-bw1uh.mongodb.net:27017/qna-api?ssl=true&authSource=admin&replicaSet=dev-pscpre1-imported-shard-0
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: CREATION_TIMESTAMP
          valueFrom:
            fieldRef:
              fieldPath: metadata.annotations['creationTimestamp']
        - name: INSTANCE
          value: api.dev.sharecare.com
        - name: REGION
          value: US
        - name: MAESTRO_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: MAESTRO_CREATION_TIMESTAMP
          valueFrom:
            fieldRef:
              fieldPath: metadata.annotations['creationTimestamp']
        - name: MAESTRO_INSTANCE
          value: api.dev.sharecare.com
        - name: MAESTRO_HOSTS
          value: api.dev.sharecare.com
        - name: MAESTRO_REGION
          value: US
        - name: MAESTRO_ALL_REGIONS
          value: US
        - name: NODE_ENV
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: HOSTNAME
          value: api.dev.sharecare.com
        image: nexus.admin.sharecare.com/qna-api:2.0.0-19
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sleep
              - "5"
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /qna/healthcheck
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
        name: qna-api
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /qna/healthcheck
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 64Mi
      imagePullSecrets:
      - name: nexus
status: {}
